# memo

./: CMakeLists.txt  README  copyright  manifest.json.in  quick-memo.desktop.in
app/: main.qml
app/common/: ColorDialog.qml  NoteModel.qml  NoteTextArea.qml  NoteTextField.qml  PageWithBottomEdge.qml  Toaster.qml  dateHelper.js
app/editPage/: ListManager.qml  PictureButton.qml  PicturesManager.qml
app/mainPage/: Delegate.qml  HorizontalFlowListView.qml  ListViewDelegate.qml  MultiSelectionHandler.qml
app/theme/: OverflowPanel.qml  PageHeadButton.qml  PageHeadStyle.qml  SectionButton.qml
app/ubuntucomponents/: EmptyState.qml  InputHandler.qml  README.components  TextCursor.qml  TextField.qml  TextInputPopover.qml
app/ui/: AboutPage.qml  EditMemoPage.qml  ImageViewer.qml  MainPage.qml
cmake/: Click.cmake
po/: CMakeLists.txt  es.po  fr.po  nb.po  nl.po  quick-memo.pot
